--- a/style.css
+++ b/style.css
@@ -77,25 +77,30 @@ nav{
     font-size: 50px;
 }
 .section p{
-    margin-top: 10px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 20px;
-    font-size: 17px;
-    color: white;
+    margin: 10px 0px 40px;
+    font-size: 21px;
+    color:rgb(0, 0, 0);
 }
 .rectangle{
-  margin-top: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 150px;
-  width: 70%;
-  padding: 10px;
-  height: 400px;
-  width: 700px;
-  background-color: #2E2C29;
+    margin-top: 150px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 100px;
+    outline: red solid 10px;
+    width: 70%;
+    padding: 10px;
+    height: 320px;
+    width: 700px;
+    background-color: white;
 }
 .rectangle p{
-  font-size: 17px;
-  color: white;
+    color: black;
+    font-size: 23px;
+    background-color: white;
+    text-align: center;
 }
+.instructions{
+    margin-left: 100px;
+    margin-bottom: 100px;
+}
+
