--- a/style.css
+++ b/style.css
@@ -179,3 +179,22 @@ nav{
     padding: 10px;
     border: 3px solid red;
 }
+/*Polymorphism*/
+.rectangle5{
+    margin-top: 150px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 100px;
+    outline: red solid 10px;
+    width: 70%;
+    padding: 10px;
+    height: 150px;
+    width: 700px;
+    background-color: white;
+}
+.rectangle5 p{
+    color: black;
+    font-size: 23px;
+    background-color: white;
+    text-align: center;
+}
